PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Improved support for the emacs-ssh-file-modes making Emacs aware of the format of the SSH /known_hosts/ and /authorized_keys/ files.
  This is activated by the *pel-use-emacs-ssh-file-modes* user-option.
  - PEL now use my fork of the original project which modernizes the code and fixes font locking issues that shows under the latest Emacs.
  - Add the ~<f12>~ key prefix binding top the two modes allowing quick access to the new [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/ssh-files.pdf][ssh PDF]] help file and to the
    PEL and mode specific customization buffers.
  - also add the ~<f12> =~ key binding to the *ssh-abbreviated-keys-mode* command.
- Add logic to native compile Emacs lisp files downloaded into PEL =~/.emacs.d/utils=
  directory.  The new pel-comp.el file holds the logic.
- Add key bindings for Emacs text transpose commands:
  - ~<f11> t t r~ bound to *transpose-regions*
  - ~<f11> t t W~ bound to *subword-transpose*
- Add PEL support for the VHDL hardware description language when
  *pel-use-vhdl* is activated (set to t).  This is a early implementation.
  When activated, PEL provides the PEL conventional keys in *vhdl-mode*
  buffers:
  - ~<f12> <f1>~  opens the (new, early) [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/hdl-vhdl.pdf][𝖍𝖉𝔩 - VHDL PDF]] file(or HTML page).
  - ~<f12> <f2>~ opens the customization buffer for PEL VHDL support.
  - ~<f12> <f3>~ opens the Emacs customization buffer for *vhdl-mode*.
- Add PEL support for the Verilog hardware description language when
  *pel-use-verilog* is activated (set to t).  This is a early implementation.
  When activated, PEL provides the PEL conventional keys in *verilog-mode*
  buffers: